app/assets/stylesheets/components/_sidebar.scss
/* Main navbar */
.sidebar-wagon {
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
  background: $grey-card;
  transition: all 0.3s ease;
  width: 17%;
  padding: 0px 30px;
  display: flex;
  position:fixed;
  flex-direction: column;
  align-items: center;
  left: 0;
  top: 0;
  bottom: 0;
}

.border {
  border-bottom: 2px solid #cccccc;
  padding-left: 120px;
  padding-right: 70px;
  margin-bottom: 20px;
  margin-top: 20px;
}

.border-light {
  border-bottom: 1px solid #ddd;
  margin-bottom: 20px;
  margin-top: 20px;
  margin-right: 15px;
}


#logo-name{
  display: inline;
  text-decoration: none;
  color: $purple;
  opacity: 1;
  &:hover {
    color: $purple;
    opacity: 0.5;
  };
}

.sidebar-logo{
  margin-bottom: 5px;
  margin-top: 25px;
  margin-right: 5px;
  height: 57px;
}


.sidebar-menu{
  justify-content: space-between;
}

.sidebar-avatar {
  align-items: center;
  display: flex;
  flex-direction: column;
  margin-top: 10px;
}

#user-name-sidebar {
  opacity: 0.5;
}

/* Logo */
.navbar-wagon-brand img {
  height: 50px;
}

/* User Avatar */
.sidebar-wagon .avatar {
  height: 70px;
  width: 70px;
  object-fit: cover;
  overflow: hidden;
  border-radius: 50%;
}

.sidebar-link {
  color: #616668;
}

.sidebar-link:hover {
  color: black;
  text-decoration: none;
}


.sidebar-link a {
  color: #616668;
    &:hover {
    color: black;
    opacity: 1;
  };
}


.list-unstyled {
  margin-top: 50px;
}

.list-unstyled li {
  color: #616668;
}

.sidebar-avatar{
  opacity:1;
}

